[package]
name = "ez_al"
version = "0.5.0"
edition = "2021"
authors = ["sid <me@skillissuedev.net>"]
readme = "../README.md"
description = "A simple audio library"
categories = ["game-development", "multimedia::audio", "multimedia"]
keywords = ["gamedev", "game", "sound", "audio", "openal"]
repository = "https://github.com/skillissuedev/ez_al/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavers = "1.4.2"
linear_model_allen = "0.4.0"
minimp3 = "0.6.1"
